Add test publications page

--- a/config.toml
+++ b/config.toml
@@ -67,6 +67,12 @@ preserveTaxonomyNames = true
     url = "/posts/"       # The path can lead to a content folder too.
     weight = 20
 
+  [[menu.main]]
+    identifier = "publication" # An unique identifier for the button
+    name = "Publications"       # A display name for the button
+    url = "/publication/"      # The path to the content. It can lead to a single page (like here)
+    weight = 30          # A number to order the buttons in the navbar
+
 [taxonomies]
 category = "categories"
 tag = "tags"
