--- a/config.toml
+++ b/config.toml
@@ -1,78 +1,233 @@
+########################### Default configuration ######################
 #baseURL = "https://ldbcouncil.org"
 baseURL = "https://ldbc.github.io"
 title = "Linked Data Benchmark Council"
 languageCode = "en"
 DefaultContentLanguage = "en" # Change this to change the site's language
-theme = "hugo.386"
+theme = "bexer-hugo"
 preserveTaxonomyNames = true
 
-[params]
-    # The name to display as main title in the home page
-    mainpagetitle = "LDBC"
+# post pagination
+paginate = "6"
+# post excerpt
+summaryLength = "10"
+# disqus short name
+disqusShortname = "bexer" # get your shortname form here : https://disqus.com
+# disable language
+disableLanguages = [] # desable language from here
 
-    # The subtitle to display under the title in the home page
-    mainpagesubtitle = "TODO: add main page subtitle here" 
+[outputs]
+home = ["HTML", "RSS", "JSON"]
 
-    # The description of your website. It will be displayed in the home page
-    mainpagedesc = "TODO: add main page description"
+############################### Plugins #################################
+# CSS Plugins
+[[params.plugins.css]]
+link = "plugins/bootstrap/bootstrap.min.css"
+[[params.plugins.css]]
+link = "plugins/slick/slick.css"
+[[params.plugins.css]]
+link = "plugins/fontawesome/font-awesome.min.css"
+[[params.plugins.css]]
+link = "plugins/animate/animate.css"
+[[params.plugins.css]]
+link = "plugins/venobox/venobox.css"
 
-    # The name to display in the copyright section in the footer
-    copyrightname = " Copyright LDBC 2021"
+# JS Plugins
+[[params.plugins.js]]
+link = "plugins/jQuery/jquery.min.js"
+[[params.plugins.js]]
+link = "plugins/bootstrap/bootstrap.min.js"
+[[params.plugins.js]]
+link = "plugins/slick/slick.min.js"
+[[params.plugins.js]]
+link = "plugins/google-map/gmap.js"
+[[params.plugins.js]]
+link = "plugins/venobox/venobox.min.js"
+[[params.plugins.js]]
+link = "plugins/filterizr/jquery.filterizr.min.js"
+[[params.plugins.js]]
+link = "plugins/search/fuse.min.js"
+[[params.plugins.js]]
+link = "plugins/search/mark.js"
+[[params.plugins.js]]
+link = "plugins/search/search.js"
 
-    # The url to use as link in the copyright name in the footer. Leave empty to use none.
-    copyrighturl = ""
 
-    # Show the "built on Hugo" disclaimer
-    showhugo = true
+########################### navigation ################################
 
-    # Urls for social networks
-    #facebook = "https://facebook.com"
-    #twitter = "https://twitter.com"
-    #linkedin = "https://linkedin.com"
-    #github = "https://github.com"
-    #gitlab = "https://gitlab.com"
 
-    # Enables or disables the loading animations. false activates them. Default is false.
-    loadfastload = false
+[[menu.main]]
+identifier = "about" # An unique identifier for the button
+name = "About" # A display name for the button
+url = "/about/" # The path to the content. It can lead to a single page (like here)
+weight = 10 # A number to order the buttons in the navbar
 
-    # Sets the speed for the page loading effect. Default is 1.0.
-    loadspeedfactor = 1.0
+[[menu.main]]
+identifier = "posts"
+name = "All posts"
+url = "/posts/" # The path can lead to a content folder too.
+weight = 20
 
-    # Enables or disables the second flyby cursor. Default is false.
-    loadonepass = true
+[[menu.main]]
+identifier = "publication" # An unique identifier for the button
+name = "Publications" # A display name for the button
+url = "/publication/" # The path to the content. It can lead to a single page (like here)
+weight = 30 # A number to order the buttons in the navbar
+
+[[menu.main]]
+weight = 8
+name = "Benchmarks"
+hasChildren = true
+    [[menu.main]]
+    parent = "Benchmarks"
+    name = "Graphalytics Benchmark"
+    url = "benchmark-graphalytics"
+    weight = 1
+    [[menu.main]]
+    parent = "Benchmarks"
+    name = "Semantic Publishing Benchmark"
+    url = "benchmark-spb"
+    weight = 2
+    [[menu.main]]
+    parent = "Benchmarks"
+    name = "Social Network Benchmark"
+    url = "benchmark-snb"
+    weight = 3
+
+
+## footer menu
+[[menu.footer]]
+name = "Terms of Service"
+url = "terms"
+weight = 1
+
+[[menu.footer]]
+name = "Privacy Policy"
+url = "privacy-policy"
+weight = 2
+
+########################### Default parameters ######################
+
+# The name to display as main title in the home page
+#    mainpagetitle = "LDBC"
+
+# The subtitle to display under the title in the home page
+#    mainpagesubtitle = "TODO: add main page subtitle here" 
+
+# The description of your website. It will be displayed in the home page
+#    mainpagedesc = "TODO: add main page description"
+
+# The name to display in the copyright section in the footer
+#    copyrightname = " Copyright LDBC 2021"
+
+# The url to use as link in the copyright name in the footer. Leave empty to use none.
+#    copyrighturl = ""
+
+# Show the "built on Hugo" disclaimer
+#    showhugo = true
+
+# Urls for social networks
+# facebook = "https://facebook.com"
+# twitter = "https://twitter.com"
+#linkedin = "https://linkedin.com"
+# github = "https://github.com"
+#gitlab = "https://gitlab.com"
+
+# Enables or disables the loading animations. false activates them. Default is false.
+#    loadfastload = false
+
+# Sets the speed for the page loading effect. Default is 1.0.
+#    loadspeedfactor = 1.0
+
+# Enables or disables the second flyby cursor. Default is false.
+#    loadonepass = true
 
 [params.copyright]
-    name = "LDBC"
+name = "LDBC"
 
-    # The url to use as link in the copyright name in the footer. Leave empty to use none.
-    url = ""
+# The url to use as link in the copyright name in the footer. Leave empty to use none.
+url = ""
 
-    # Text to go before copyright information
-    prefix = ""
+# Text to go before copyright information
+prefix = ""
 
-    # Text to go between copyright and hugo disclaimer (if enabled)
-    suffix = "Prototype site - under construction"
+# Text to go between copyright and hugo disclaimer (if enabled)
+suffix = "Prototype site - under construction"
 
-[menu]
-  # This displays buttons in the navbar to access your contents
-  [[menu.main]]
-    identifier = "about" # An unique identifier for the button
-    name = "About"       # A display name for the button
-    url = "/about/"      # The path to the content. It can lead to a single page (like here)
-    weight = 10          # A number to order the buttons in the navbar
 
-  [[menu.main]]
-    identifier = "posts"
-    name = "All posts"
-    url = "/posts/"       # The path can lead to a content folder too.
-    weight = 20
 
-  [[menu.main]]
-    identifier = "publication" # An unique identifier for the button
-    name = "Publications"       # A display name for the button
-    url = "/publication/"      # The path to the content. It can lead to a single page (like here)
-    weight = 30          # A number to order the buttons in the navbar
+[params]
+logo = "images/ldbc-title.png"
+logo_footer = "images/ldbc.png"
+hide_title = false
 
-[taxonomies]
-category = "categories"
-tag = "tags"
+# top header
+top_header = false
+# Meta data
+description = "Linked Data Benchmark Council Website"
+author = "LDBC"
+
+# contact info
+#address = "9567 Turner Trace Apt. BC C3G8A4"
+#mobile = "+211234565523"
+#email = "info@bexer.com"
+# contact form action
+#contact_form_action = "#" # contact form works with https://formspree.io
+# Google Analitycs
+#google_analitycs_id = "" # your id
+# page sidebar quick contact form
+#quick_contact = true
+# search
+#search = true
+
+# Preloader
+[params.preloader]
+enable = true
+preloader = "" # use jpg, png, svg or gif format.
+
+# Subscription
+[params.subscription]
+enable = true
+# mailchimp subsciption
+mailchimp_form_action = "https://gmail.us4.list-manage.com/subscribe/post?u=463ee871f45d2d93748e77cad&amp;id=a0a2c6d074" # replace this url with yours
+mailchimp_form_name = "b_463ee871f45d2d93748e77cad_a0a2c6d074" # replace this code with yours
+
+# google map
+[params.map]
+enable = true
+gmap_api = "https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"
+map_latitude = "51.5223477"
+map_longitude = "-0.1622023"
+map_marker = "images/marker.png"
+
+########################### Social icon ############################
+[[params.social]]
+icon = "fa-facebook"
+link = "https://www.facebook.com/ldbcouncil"
+
+[[params.social]]
+icon = "fa-twitter"
+link = "https://twitter.com/LDBCouncil"
+
+[[params.social]]
+icon = "fa-github"
+link = "https://github.com/ldbc"
+
+################################### English language #####################################
+[Languages.en]
+languageName = "En"
+languageCode = "en-us"
+contentDir = "content/english"
+weight = 1
+home = "Home"
+
+# footer content
+footer_content = "LDBC came out of an EU FP7 project and is now a non-profit organization sustained by its members. Contact us at info AT ldbcouncil DOT org."
+# copyright
+copyright = "&copy; Copyright LDBC 2021"
+
+
+#[taxonomies]
+#category = "categories"
+#tag = "tags"
+
