Adjust SC images

--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -111,11 +111,11 @@ members:
   steering_title: "Steering Committee (info@ldbcouncil.org):"
   steering_committee_members:
     - name: "Prof. Dr. Peter Boncz (chair)"
-      picture: "images/steering-committee-pictures/peter.jpeg" 
+      picture: "images/steering-committee-pictures/peter-boncz.jpg" 
       homepage: "https://www.cwi.nl/people/peter-boncz"
     - name: "Alastair Green (vice-chair)"
-      picture: "images/steering-committee-pictures/photo_2.600x0.jpg" 
+      picture: "images/steering-committee-pictures/alastair-green.jpg" 
       homepage: "https://www.linkedin.com/in/alastair-green-65a861a7/"
     - name: "Gábor Szárnyas"
-      picture: "images/steering-committee-pictures/szarnyasg-700.png"
+      picture: "images/steering-committee-pictures/gabor-szarnyas.jpg"
       homepage: "https://www.cwi.nl/people/gabor-szarnyas"
