--- a/data/en/homepage.yml
+++ b/data/en/homepage.yml
@@ -1,4 +1,4 @@
-########################### hero slider ############################
+########################### Homepage hero slider ############################
 slider:
   enable : true
   slider_item:
@@ -48,74 +48,3 @@ post:
 #   subtitle : "Latest News"
 #   title : "Learn From Bexar"
 #   # blog post comes from "content/*/blog" folder
-
-# ################################# members ################################################
-members:
-  enable: true
-  title: "Hello"
-  sponsors_title: "Sponsor Companies:"
-  sponsors:
-    - name: "Ant Group"
-      logo: "images/members/antgroup.png"
-      link: "https://www.antgroup.com/en"
-    - name: "Oracle Labs"
-      logo: "images/members/oracle-labs.jpg"
-      link: "https://www.oracle.com/"
-  companies_title: "Companies (in alphabetical order):"
-  # The template automatically does the alphabetical ordering based on the name of the company
-  companies:
-    - name: "ArangoDB"
-      logo: "images/members/arangodb.png"
-      link: "https://www.arangodb.com/"
-    - name: "AWS"
-      logo: "images/members/aws.png"
-      link: "https://aws.amazon.com/"
-    - name: "Intel"
-      logo: "images/members/intel.png"
-      link: "http://www.intel.com/"
-    - name: "JCC Consulting Inc."
-      logo: "images/members/jcc.png"
-      link: "www.jcc.com"
-    - name: "Katana graph"
-      logo: "images/members/katana-graph.jpg"
-      link: "https://katanagraph.com/"
-    - name: "Memgraph"
-      logo: "images/members/memgraph.png"
-      link: "https://memgraph.com/"
-    - name: "Neo4j"
-      logo: "images/members/neo4j.png"
-      link: "https://neo4j.com/"
-    - name: "Chorograph"
-      logo: "images/members/chorograph.png"
-      link: "https://chorograph.com/"
-    - name: "Ontotext"
-      logo: "images/members/ontotext.jpg"
-      link: "https://www.ontotext.com/"
-    - name: "Sparsity"
-      logo: "images/members/sparsity.png"
-      link: "http://www.sparsity-technologies.com/"
-    - name: "TigerGraph"
-      logo: "images/members/tigergraph.png"
-      link: "https://www.tigergraph.com"
-  nonprofits_title: "Non-Profit Organizations:"
-  nonprofits:
-    - name: "ENS"
-      logo: "images/members/ens-paris.png"
-      link: "https://www.ens.psl.eu/en"
-    - name: "Forth"
-      logo: "images/members/forth.png"
-      link: "https://www.forth.gr/"
-    - name: "University of Edinburgh"
-      logo: "images/members/uedinburgh.png"
-      link: "https://www.ed.ac.uk/"
-  steering_title: "Steering Committee (info@ldbcouncil.org):"
-  steering_committee_members:
-    - name: "Prof. Dr. Peter Boncz (chair)"
-      picture: "images/steering-committee-pictures/peter-boncz.jpg" 
-      homepage: "https://www.cwi.nl/people/peter-boncz"
-    - name: "Alastair Green (vice-chair)"
-      picture: "images/steering-committee-pictures/alastair-green.jpg" 
-      homepage: "https://www.linkedin.com/in/alastair-green-65a861a7/"
-    - name: "Gábor Szárnyas"
-      picture: "images/steering-committee-pictures/gabor-szarnyas.jpg"
-      homepage: "https://www.cwi.nl/people/gabor-szarnyas"
