--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/bexer-hugo"]
 	path = themes/bexer-hugo
-	url = https://github.com/imbur/bexer-hugo
+	url = https://github.com/ldbc/bexer-hugo
