--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 ########################### Default configuration ######################
-baseURL = "https://ldbcouncil.org"
+baseURL = "https://www.ldbcouncil.org"
 title = "Linked Data Benchmark Council"
 languageCode = "en"
 DefaultContentLanguage = "en" # Change this to change the site's language
